# token-faucet

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
migrations/: deploy.ts
programs/token-faucet/: Cargo.toml
programs/token-faucet/src/: lib.rs
tests/: token-faucet.ts
