[package]
name = "token-faucet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_faucet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
solana-program= "1.9.5"
spl-math="0.1.0"
